main.tf
provider "aws" {
  region = "eu-west-3" // Change this to your preferred region
}

variable "instance_type" {
  default = "t2.micro"
}

resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = true
}

# APPEL DU MODULE 
module "vpc" {
  source = "./modules/vpc"
  cidr_block = "10.0.0.0/16"
  dns_hostnames = true
  aws_subnet_names = ["ControlNode_subnet", "MachineTest_subnet"]
  cidr_blocks = ["10.0.1.0/24", "10.0.2.0/24"]
}


resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "gateway_mgz"
  }
}

resource "aws_route_table" "main" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "main-route-table"
  }
}

resource "aws_route_table_association" "main" {
  subnet_id      = aws_subnet.main.id
  route_table_id = aws_route_table.main.id
}

resource "aws_subnet" "main" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "eu-west-3a" // Change to your preferred availability zone
}

resource "aws_security_group" "allow_ssh" {
  vpc_id = aws_vpc.main.id
  name   = "allow_ssh_mgz"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# data "template_file" "user_data_mgz" {
#   template = "./userdata.yaml"
# }

resource "aws_instance" "web" {
  ami           = "ami-06e02ae7bdac6b938" // Change this to your preferred Ubuntu AMI
  instance_type = var.instance_type
  subnet_id     = aws_subnet.main.id
  key_name      = var.key_name
  vpc_security_group_ids = [aws_security_group.allow_ssh.id]
  associate_public_ip_address = true
  user_data = file("userdata.yaml")
  
  tags = {
    Name = "web-server-Mgz"
  }


  connection {
      type        = "ssh"
      host        = self.public_ip
      user        = "ubuntu"
      private_key = file(var.private_key_path)
    } 

}

output "aws_instance_public_dns" {
  value = aws_instance.web.public_dns
}
